--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==0.10.1
+flask>=1.0.0
 gunicorn==19.6.0
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2>=2.10.1
 MarkupSafe==0.23
-Werkzeug==0.11.10
+werkzeug>=0.15.3
 folium==0.7.0
 pandas==0.24.1
